create endpoint for creating new dealer

--- a/src/CarRentalSystem.Dealers.API/CarRentalSystem.Dealers.API.csproj
+++ b/src/CarRentalSystem.Dealers.API/CarRentalSystem.Dealers.API.csproj
@@ -18,6 +18,7 @@
   <ItemGroup>
     <ProjectReference Include="..\CarRentalSystem.Common\CarRentalSystem.Common.csproj" />
     <ProjectReference Include="..\CarRentalSystem.Dealers.Data\CarRentalSystem.Dealers.Data.csproj" />
+    <ProjectReference Include="..\CarRentalSystem.Dealers.Service\CarRentalSystem.Dealers.Service.csproj" />
   </ItemGroup>
 
 </Project>
