--- a/src/CarRentalSystem.Statistics.API/CarRentalSystem.Statistics.API.csproj
+++ b/src/CarRentalSystem.Statistics.API/CarRentalSystem.Statistics.API.csproj
@@ -2,7 +2,13 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <UserSecretsId>45f98fec-3e68-4f71-91bc-c52d046e6d27</UserSecretsId>
+    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.10.14" />
+  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\CarRentalSystem.Common\CarRentalSystem.Common.csproj" />
