--- a/src/CarRentalSystem.Statistics.API/Properties/launchSettings.json
+++ b/src/CarRentalSystem.Statistics.API/Properties/launchSettings.json
@@ -1,12 +1,19 @@
-﻿{  
+{
   "profiles": {
     "CarRentalSystem.Statistics.API": {
       "commandName": "Project",
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:5005;http://localhost:5004",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "applicationUrl": "https://localhost:5005;http://localhost:5004"
+    },
+    "Docker": {
+      "commandName": "Docker",
+      "launchBrowser": true,
+      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}",
+      "publishAllPorts": true,
+      "useSSL": true
     }
   }
 }
