--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ solution: src/CarRentalSystem.sln
 install:
   - dotnet restore
 script:
+  -cd src/CarRentalSystem
   - dotnet build
 branches:
   only:
