--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,8 @@ dist: xenial
 sudo: required
 dotnet: 5.0
 solution: src/CarRentalSystem.sln
+before_script:
+  - chmod -R a+x scripts
 install:
   - ./scripts/dotnet-restore.sh
 script:
