--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ solution: src/CarRentalSystem.sln
 before_install:
   - chmod +x ./scripts/dotnet-restore.sh 
 install:
-  - ./scripts/dotnet-restore.sh
+  - travis_wait ./scripts/dotnet-restore.sh
 before_script:
   - chmod +x ./scripts/dotnet-build.sh 
 script:
