--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -90,7 +90,12 @@ services:
          dockerfile: ./CarRentalSystem.Admin/Dockerfile
       ports: 
          - "5009:80"
-      restart: on-failure   
+      env_file: ./src/CarRentalSystem.Common/Common.env
+      environment:
+         - ServiceEndpoints__Identity=http://identity
+      restart: on-failure  
+      depends_on:
+         - identity 
       networks: 
          - carrentalsystem-network
 networks:
