--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -93,6 +93,7 @@ services:
       env_file: ./src/CarRentalSystem.Common/Common.env
       environment:
          - ServiceEndpoints__Identity=http://identity
+         - ServiceEndpoints__Statistics=http://statistics
       restart: on-failure  
       depends_on:
          - identity 
