--- a/src/CarRentalSystem.Dealers.Gateway/CarRentalSystem.Dealers.Gateway.csproj
+++ b/src/CarRentalSystem.Dealers.Gateway/CarRentalSystem.Dealers.Gateway.csproj
@@ -5,7 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\" />
+    <PackageReference Include="Refit.HttpClientFactory" Version="6.0.38" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\CarRentalSystem.Common\CarRentalSystem.Common.csproj" />
   </ItemGroup>
 
 
