--- a/src/CarRentalSystem.Dealers.Gateway/appsettings.json
+++ b/src/CarRentalSystem.Dealers.Gateway/appsettings.json
@@ -2,6 +2,10 @@
   "ApplicationSettings": {
     "Secret": "S0M3 M4G1C UN1C0RNS G3N3R4T3D TH1S S3CR3T"
   },
+  "ServiceEndpoints": {
+    "Dealers": "http://localhost:5003",
+    "Statistics": "http://localhost:5005"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
