--- a/src/CarRentalSystem.Dealers.Gateway/CarRentalSystem.Dealers.Gateway.csproj
+++ b/src/CarRentalSystem.Dealers.Gateway/CarRentalSystem.Dealers.Gateway.csproj
@@ -2,9 +2,12 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <UserSecretsId>1ad82350-f78f-437c-a2a1-35b9409a4863</UserSecretsId>
+    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.10.14" />
     <PackageReference Include="Refit.HttpClientFactory" Version="6.0.38" />
   </ItemGroup>
 
