--- a/src/CarRentalSystem.Dealers.Gateway/Properties/launchSettings.json
+++ b/src/CarRentalSystem.Dealers.Gateway/Properties/launchSettings.json
@@ -1,13 +1,18 @@
-﻿{
+{
   "$schema": "http://json.schemastore.org/launchsettings.json",
   "profiles": {
     "CarRentalSystem.Dealers.Gateway": {
       "commandName": "Project",
-      "launchBrowser": false,
-      "applicationUrl": "https://localhost:5011;http://localhost:5010",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "applicationUrl": "https://localhost:5011;http://localhost:5010"
+    },
+    "Docker": {
+      "commandName": "Docker",
+      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}",
+      "publishAllPorts": true,
+      "useSSL": true
     }
   }
 }
