--- a/src/CarRentalSystem.Schedule.Services/CarRentalSystem.Schedule.Services.csproj
+++ b/src/CarRentalSystem.Schedule.Services/CarRentalSystem.Schedule.Services.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -7,7 +7,6 @@
   <ItemGroup>
     <ProjectReference Include="..\CarRentalSystem.Common\CarRentalSystem.Common.csproj" />
     <ProjectReference Include="..\CarRentalSystem.Schedule.Data\CarRentalSystem.Schedule.Data.csproj" />
-    <ProjectReference Include="..\CarRentalSystem.Schedule.Services\CarRentalSystem.Schedule.Services.csproj" />
   </ItemGroup>
 
 </Project>
